Closed Bug 1821075 Opened 1 year ago Closed 1 year ago

[IT][philips.it] Form autofill/preview/clear isn't applied on "Cardholder name" field and on the rest of the fields are only applied on the selected one

Categories

(Toolkit :: Form Autofill, defect, P2)

Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox111 --- disabled
firefox112 --- disabled
firefox113 --- fixed

People

(Reporter: hyacoub, Assigned: mtigley)

References

(Blocks 1 open bug, )

Details

(Whiteboard: [fxcm-cc-new-geo])

Attachments

(3 files)

Attached video 2023-03-08_17h07_09.mp4

Found in

  • 111.0-candidates

Affected versions

  • 111.0-candidates

Tested platforms

  • Affected platforms: Windows 10

Preconditions

  • browser.search.region = IT
  • extensions.formautofill.creditCards.supportedCountries = IT
  • Have at least one CC already saved

Steps to reproduce

  1. Reach the payment form on https://www.philips.it
  2. Click on "Cardholder name" field to observe autofill dropdown
  3. Click on "CC number", and "Expiry date" fields to observe the preview and autofill functionalities
  4. Right click on any of the filled fields and select clear form

Expected result

  • Form autofill/preview/clear should be applied on eligible fields.

Actual result

  • Form autofill/preview/clear are only applied on the selected field.
  • Form autofill isn't applied on the "Cardholder name" field.

Regression range

  • N/A

Additional notes

Attached file philips.it.html
Priority: -- → P2
Whiteboard: [fxcm-cc-new-geo]
Assignee: nobody → mtigley
Status: NEW → ASSIGNED
Priority: P2 → P3
Priority: P3 → P2

We could adjust this CC name rule to be /.*holder.*name/i here. Or even also adding the phrase /.*titolare.*carta/i to the ruleset too.

Dimi, what do you think?

Flags: needinfo?(dlee)

(In reply to Micah [:mtigley] (she/her) from comment #2)

We could adjust this CC name rule to be /.*holder.*name/i here. Or even also adding the phrase /.*titolare.*carta/i to the ruleset too.

I'd be a bit hesitant to add /holder.*name since I'm not sure whether it will make us treat all different kinds of "xxx holder name" as a credit card name field. For example, car holder name, house holder name, etc. ???

Adding /titolare.*carta/ seems reasonable because we're already using this pattern, we just don't have the right keyword for Italian. Could you help test whether this issue is fixed if we only add /titolare.*carta/ to cc-name regexp? Thanks!

Flags: needinfo?(dlee)
Pushed by mtigley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ff182b7e4304
Add support for Italian phrases: Card Holder and Card Number. r=dimi
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch

Since nightly and release are affected, beta will likely be affected too.
For more information, please visit auto_nag documentation.

The patch landed in nightly and beta is affected.
:mtigley, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox112 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(mtigley)
Regressions: 1825777

I confirm that autofill dropdown is now triggered also from "Cardholder Name" field.
The rest of the autofill/preview/clear functionalities are still not working properly, I will not change the status of this bug to verified yet.

While verifying this bug I noticed that it reproduced a regression and logged bug 1825777.

No longer regressions: 1825777
Flags: needinfo?(mtigley)

The same behavior as Hani mentioned in comment 9 is still present in the latest Nightly 117.0a1 build. I filed a new bug for it so we can keep this closed since the card name field issue was fixed here.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: