Bug 1821075 - Add support for Italian phrases: Card Holder and Card Number. r=dimi

Differential Revision: https://phabricator.services.mozilla.com/D173852